<resources>
    <string name="app_name">PracticaLastNF</string>
    <string name="tuCartera">Tu Cartera</string>
    <string name="imagenCartera">Imagen cartera</string>
    <string name="tituloCartera">Gestiona tu cartera</string>
    <string name="nombreAux">Person Name</string>
    <string name="dineroAux">1</string>
    <string name="textAux">Person Name le debo 0e Lorem ipsum </string>
    <string name="nombreAux2">Person Name2</string>
    <string name="dineroAux2">5</string>
    <string name="textAux2">Person Name me debe 0e Lorem ipsum </string>
    <string name="inicio">Inicio</string>
    <string name="ayuda">Ayuda</string>
    <string name="ayudaSelect">Ayuda seleccionada</string>
    <string name="guardar_item">Guardar item</string>
    <string name="editar_item">Editar item</string>
    <string name="borrar_item">Borrar item</string>
    <string name="nuevo_item">Nuevo item</string>
    <string name="personaDinero">Persona?</string>
    <string name="cuantoDinero">Cuanto dinero?</string>
    <string name="porque">Por qué?</string>
    <string name="posiblesOpcione">Elige una de las dos possibles opciones!</string>
    <string name="deber">Ha deber</string>
    <string name="deben">Me deben</string>
    <string name="listam">Lista</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
