<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.oriolandres.practicalastnf.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/posiblesOpcione"
        android:layout_weight="0.2"
        android:gravity="center"/>
    <Button
        android:id="@+id/buttonDebes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/ic_wallet"
        android:text="@string/deber"
        android:textSize="30sp"
        android:onClick="nuevaSeleccion"/>
    <Button
        android:id="@+id/buttonDeben"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/deben"
        android:background="@mipmap/ic_wallet"
        android:layout_weight="1"
        android:textSize="30sp"
        android:onClick="nuevaSeleccion"/>

</LinearLayout>
